# dataset-archiver

./: .flake8  README.md  pyproject.toml  setup.cfg
datasetarchiver/: __main__.py  archiver.py  tool.py
src/datasetarchiver/: __main__.py  archiver.py  tool.py
tests/: test_archiver.py
tests/test_data/movies/: meta.json  test.jsonl  train.jsonl  val.jsonl
