[metadata]
name = datasetarchiver
version = 0.0.1
author_email = maximilian.reimer.42@gmail.com
author = Maximilian Reimer <{author_email}>
home_page = https://github.com/maximilianreimer/dataset-archiver
license = GPLv3
license_file = LICENSE
long_description = file: README.md


[options]
python_requires = >= 3.7
install_requires = 
packages = find:


[options.packages.find]
where = datasetarchiver

[options.entry_points]
console_scripts =
    dataset_archiver = datasetarchiver.tool:main

[options.extras_require]
dev =
    black==20.8b1
    flake8==3.8.4
    pytest==6.0.1
    pytest-html==3.1.1
    pytest-cov==2.7.0
    pre-commit==2.7.1
docs =
    sphinxcontrib-napoleon==0.7
    sphinx-rtd-theme==0.5.1
    sphinx-autoapi==1.7.0